--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <div class="row">
           <div class="col-4 col-5-large col-12-medium">
             <span class="image fit"
-              ><img src="images/IMG_6479.jpg" alt=""
+              ><img
+                src="images/IMG_6479.jpg"
+                alt="Mike leaning on a wall with humorous sign about Over 60 people"
             /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
@@ -49,27 +51,29 @@
     <article id="work" class="wrapper style2">
       <div class="container">
         <header>
-          <h2>Here's all the stuff I do.</h2>
+          <h2>Here's some of the things I do.</h2>
           <p>Being retired leads to all sorts of mischief.</p>
         </header>
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
-              <span class="icon featured fa-comments"></span>
+              <span class="icon featured fa-cloud"></span>
               <h3>Plane Stuff</h3>
               <p>
                 I have a private pilot license, an instrument rating and a
-                commerial rating. I fly for fun.
+                commercial rating. I fly for fun around Maryland's Eastern Shore
+                and the Mid-Atlantic.
               </p>
             </section>
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
-              <span class="icon solid featured fa-camera-retro"></span>
+              <span class="icon solid featured fa-music"></span>
               <h3>Music Stuff</h3>
               <p>
-                I like Irish music. I play Irish whistle and in the midst of
-                lessons. I play at seisiúns and at church. I want to be better.
+                I like Irish trad music. I play Irish whistle and am taking
+                lessons lessons. I play at seisiúns and at church. I want to be
+                better.
               </p>
             </section>
           </div>
@@ -78,8 +82,9 @@
               <span class="icon featured fa-thumbs-up"></span>
               <h3>Other Stuff</h3>
               <p>
-                Programming for fun, biking, fishing, gardening, walking, and
-                things. Happily married for over 40 years.
+                Programming for fun, biking, fishing, walking, serving at
+                church, and reading anything with words on it. Happily married
+                for over 40 years.
               </p>
             </section>
           </div>
@@ -98,12 +103,16 @@
             <h3>Find me on ...</h3>
             <ul class="social">
               <li>
-                <a href="#" class="icon brands fa-twitter"
-                  ><span class="label">Twitter</span></a
+                <a
+                  href="https://bsky.app/@deweym.bsky.socia"
+                  class="icon fa-cloud"
+                  ><span class="label">Bluesky</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands fa-facebook-f"
+                <a
+                  href="https://www.facebook.com/mike.dewey.7/"
+                  class="icon brands fa-facebook-f"
                   ><span class="label">Facebook</span></a
                 >
               </li>
@@ -119,13 +128,14 @@
 								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
 								-->
             </ul>
-            <hr />
           </div>
         </div>
         <footer>
           <ul id="copyright">
             <li>&copy; 2024. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>
+              Design courtesy of <a href="http://html5up.net">HTML5 UP</a>
+            </li>
           </ul>
         </footer>
       </div>
