Fixed to use a square picture

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class="col-4 col-5-large col-12-medium">
             <span class="image fit"
               ><img
-                src="images/IMG_6479.jpg"
-                alt="Mike leaning on a wall with humorous sign about Over 60 people"
+                src="images/IMG_1885.jpeg"
+                alt="Mike playing the guitar"
             /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
