Changed to use local icons including bluesky.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <div class="row">
           <div class="col-4 col-5-large col-12-medium">
             <span class="image fit"
-              ><img
-                src="images/IMG_1885.jpeg"
-                alt="Mike playing the guitar"
+              ><img src="images/IMG_1885.jpeg" alt="Mike playing the guitar"
             /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
@@ -60,7 +58,7 @@
               <span class="icon featured fa-cloud"></span>
               <h3>Plane Stuff</h3>
               <p>
-                I have a private pilot license, an instrument rating and a
+                I have a private pilot license, an instrument rating, and a
                 commercial rating. I fly for fun around Maryland's Eastern Shore
                 and the Mid-Atlantic.
               </p>
@@ -72,8 +70,7 @@
               <h3>Music Stuff</h3>
               <p>
                 I like Irish trad music. I play Irish whistle and am taking
-                lessons lessons. I play at seisiúns and at church. I want to be
-                better.
+                lessons. I play at seisiúns and at church. I want to be better.
               </p>
             </section>
           </div>
@@ -100,33 +97,54 @@
       <div class="container medium">
         <div class="row">
           <div class="col-12">
-            <h3>Find me on ...</h3>
+            <h3>Find me on</h3>
             <ul class="social">
               <li>
                 <a
                   href="https://bsky.app/@deweym.bsky.socia"
-                  class="icon fa-cloud"
-                  ><span class="label">Bluesky</span></a
+                  class="icon brands"
+                  style="
+                    display: inline-flex;
+                    align-items: center;
+                    text-decoration: none;
+                  "
                 >
+                  <img
+                    src="images/bluesky-icon.png"
+                    alt="Bluesky"
+                    style="
+                      width: 48px;
+                      height: 48px;
+                      margin-right: 5px;
+                      border-radius: 50%;
+                    "
+                  />
+                  <span class="label">Bluesky</span>
+                </a>
               </li>
               <li>
                 <a
                   href="https://www.facebook.com/mike.dewey.7/"
-                  class="icon brands fa-facebook-f"
-                  ><span class="label">Facebook</span></a
+                  class="icon brands"
+                  style="
+                    display: inline-flex;
+                    align-items: center;
+                    text-decoration: none;
+                  "
                 >
+                  <img
+                    src="images/facebook-square-icon.png"
+                    alt="Facebook"
+                    style="
+                      width: 48px;
+                      height: 48px;
+                      margin-right: 5px;
+                      border-radius: 50%;
+                    "
+                  />
+                  <span class="label">Facebook</span>
+                </a>
               </li>
-              <!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
             </ul>
           </div>
         </div>
